--- a/website/src/app/app.component.html
+++ b/website/src/app/app.component.html
@@ -7,14 +7,38 @@
 
 <body>
 
-<div class="welcome">
-  <!-- <div class="welcome-image"> -->
-  
-    <h1>Mihai Blaga</h1>
+<div class="header">
+  <!-- <h1>Mihai Blaga</h1> -->
 
-    <img src="../assets/flight-gallery/flight-5.jpg" alt="Plane taking off.">
-  <!-- </div> -->
+  <div class="parallax">
+    <div class="header-name-offset">
+      <div class="header-name">
+        <h1>Mihai Blaga</h1>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
+<div class="body">
+  <p>
+
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in ipsum vitae sapien semper dapibus. Sed mattis nibh ante, varius viverra eros imperdiet vel. Ut rutrum leo eu metus rhoncus, id vestibulum nisi euismod. Donec interdum magna non pretium volutpat. Maecenas quis mi in quam mattis ultricies vitae eu enim. Phasellus a placerat elit, id ultrices dui. Morbi sed rhoncus elit, et posuere dolor. Quisque id elit sed velit blandit sodales at sit amet nisl. Curabitur euismod luctus ligula, vitae hendrerit erat pharetra a. Nullam vel massa sed purus sagittis commodo a sed mauris. Donec non varius ex.
+    
+    Fusce diam ex, lobortis sodales leo commodo, mollis facilisis libero. Vestibulum rhoncus eros at quam ullamcorper blandit et et nisi. Sed varius aliquet urna, et venenatis ante lobortis sollicitudin. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis a purus at lectus commodo faucibus. Nunc vel sem elit. Morbi imperdiet tortor enim, ut interdum quam rhoncus at. Mauris iaculis consequat est, vel tempus lacus tincidunt non. Nam at condimentum metus. Maecenas cursus lectus quis ex fermentum tempus. Donec sit amet facilisis dolor. Duis ut mauris vitae purus vestibulum suscipit. Vestibulum felis ante, mollis sed porttitor non, eleifend vehicula massa. Praesent in ligula gravida velit iaculis pharetra vitae sed velit. Proin interdum feugiat lorem, sed condimentum lectus rutrum in.
+    
+    Quisque et libero in libero ultricies interdum. Praesent eget orci ac nunc dictum congue. Nam nec egestas nunc, non ornare felis. Sed eget felis eros. Pellentesque convallis eu turpis hendrerit tempus. Morbi auctor augue quis dapibus molestie. Morbi fringilla libero vitae turpis luctus, eget lobortis magna ultrices. Ut nisl quam, gravida sed metus in, fermentum pharetra dui.
+    
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc posuere vel odio ut malesuada. Donec semper magna nisi, id venenatis dolor aliquam eu. Aliquam egestas eros a nulla mollis fringilla. Sed commodo efficitur lacinia. Sed purus massa, dapibus tincidunt lacinia ut, tincidunt sed augue. Nulla facilisi. Sed orci odio, bibendum eu sodales a, porttitor vitae leo. Duis non enim urna. Morbi et lacus hendrerit, finibus mi non, tincidunt orci. Etiam tristique ante facilisis erat aliquam, nec facilisis quam ultrices. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla eu posuere enim. Nulla eu leo pulvinar nisi lacinia cursus quis nec ex. Sed at luctus justo.
+    
+    Pellentesque sed metus ex. Cras quis dolor mattis, venenatis massa id, tincidunt neque. Vestibulum ullamcorper ex vitae mi lobortis, ac commodo turpis imperdiet. Phasellus diam orci, cursus porttitor porttitor ut, efficitur et neque. Donec luctus sem nibh, eu vehicula felis auctor a. Curabitur ut iaculis felis, vitae accumsan nunc. Vivamus bibendum neque vel orci tempus, sed pulvinar lectus faucibus. Duis suscipit, massa fermentum venenatis eleifend, dolor enim porttitor quam, eget pretium metus sapien quis lacus. Nullam semper metus in mauris rutrum scelerisque.
+    
+    Quisque porttitor, magna id posuere ultricies, justo enim accumsan neque, ut rhoncus nisi purus ut lectus. Morbi vestibulum imperdiet nulla ac auctor. Aliquam sed ex non mauris fermentum vehicula sed quis nisi. Etiam imperdiet lorem massa, ut ullamcorper risus sagittis nec. Nam vulputate dui feugiat elit laoreet dignissim. Praesent vitae porta turpis. Suspendisse laoreet felis sed dolor suscipit tristique. Fusce placerat mattis sodales. Cras egestas, diam eu consequat efficitur, dolor ante commodo ipsum, id consectetur dolor eros vitae urna. Donec viverra, magna et ultricies cursus, nunc eros ullamcorper justo, sit amet imperdiet lectus metus ac augue. Mauris nisi justo, mattis nec massa quis, vulputate blandit velit.
+    
+    Integer rutrum sed urna ut tincidunt. Integer vitae ornare ex, in mollis orci. Aenean cursus nulla lorem. Suspendisse mattis placerat nisi. Sed et scelerisque urna, ut elementum purus. Aliquam dapibus dolor ac quam faucibus, ac faucibus ligula aliquam. Maecenas volutpat nunc justo, eget varius est aliquam ut. Donec in mauris lacus. Nulla fringilla, est a auctor faucibus, nibh augue elementum magna, sed semper felis metus nec orci. Aenean mattis, sem eget fringilla fringilla, velit tortor rhoncus urna, in iaculis erat tellus at nisi. Sed sollicitudin, turpis ac venenatis fermentum, massa odio semper urna, at ultrices enim justo vitae eros. Suspendisse ultrices odio in vestibulum sodales. Duis scelerisque tortor sed est tempus, in condimentum elit vestibulum. Cras eget massa non ligula volutpat mollis. </p>
+</div>
+
 
 </body>
 </html>
